fix covers

--- a/static/css/components/carousel.less
+++ b/static/css/components/carousel.less
@@ -167,7 +167,6 @@
     font-style: oblique;
   }
 }
-
 @height-cover-compact: 125px;
 .carousel--compact {
   .book .book-cover {
@@ -178,6 +177,8 @@
   }
   .carousel__item__blankcover {
     height: @height-cover-compact;
+    padding: 20% 10px 10px;
+    margin: 0 auto;
   }
 }
 
